--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compose": "docker-compose up -d"
   },
   "dependencies": {
+    "ali-oss": "^6.21.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -14,8 +15,12 @@
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-aliyun-oss": "^2.1.3",
     "mysql2": "^3.11.3",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "uuid": "^11.0.2"
   }
 }
